src/test/resources/tests/typeError/arrayCreateTwoTypes.qg

init {
    val = arrayList(:number, :number)
}

run true

input(a,b) true
